--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "date-fns": "^3.3.1",
     "lucide-react": "^0.344.0",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.2",
-    "recharts": "^2.12.1",
-    "date-fns": "^3.3.1",
-    "papaparse": "^5.4.1"
+    "recharts": "^2.12.1"
   },
   "devDependencies": {
     "@types/papaparse": "^5.3.14",
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.4.35",
+    "supabase": "^2.12.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.2"
